@@ -7,13 +7,10 @@
 #include <str/str.h>
 #include "constants.h"
 
-#define FLAG_NEED_FILE (1<<0)
-
 struct plugin
 {
   struct plugin* next;
   const char* name;
-  unsigned flags;
   const response* (*init)(void);
   const response* (*helo)(str*);
   const response* (*reset)(void);
@@ -73,7 +70,6 @@ int get_netstring(ibuf* in, str* s);
 /* From modules.c */
 extern struct plugin* plugin_list;
 extern struct plugin* plugin_tail;
-extern unsigned module_flags;
 extern void add_plugin(struct plugin*);
 extern const response* load_modules(const char* protocol_name,
 				    const char* backend_name,
