@@ -3,8 +3,9 @@ Changes in version 1.10
 
 - Added a ClamAV virus scanner plugin.
 
-- Modified the plugin API to add a flags word and to (optionally) save
-  messages to a temporary file (needed by the ClamAV plugin).
+- Modified the plugin API to save messages to a temporary file (needed
+  by the ClamAV plugin).  This allows plugins to have random access to
+  messages and to arbitrarily modify message contents.
 
 Development of this version has been sponsored by FutureQuest, Inc.
 ossi@FutureQuest.net  http://www.FutureQuest.net/
